# lbdmod

./: CMakeLists.txt  README.md  main.cpp
cpp/include/: dataconv.h
cpp/src/: LBDFloatExtractor.cc  LinesConfigurator.cc  StoredLineExtractor.cc  dataconv.cpp  lbd_mod_funcs.cpp  python_module.cpp
include/: EmptyExtractor.h  EmptyMatcher.h  LBDFLoatOnlineExtractor.h  LBDFloatExtractor.h  LBDFloatLineMatcher.h  LLDExtractor.h  LLDLineMatcher.h  LineExtractor.h  LineMatcher.h  LinesConfigurator.h  StoredLineExtractor.h  dataconv.h  lbd_mod_funcs.h
include/opencv2/: line_descriptor.hpp
include/opencv2/line_descriptor/: descriptor.hpp
python/: lbdtest.py
src/: EmptyExtractor.cc  EmptyMatcher.cc  LBDFLoatOnlineExtractor.cpp  LBDFloatExtractor.cc  LBDFloatLineMatcher.cc  LLDExtractor.cc  LLDLineMatcher.cc  LSDDetector.cpp  LineExtractor.cc  LinesConfigurator.cc  StoredLineExtractor.cc  binary_descriptor.cpp  binary_descriptor_matcher.cpp  dataconv.cpp  draw.cpp  lbd_mod_funcs.cpp  precomp.hpp  python_module.cpp
